@@ -22,7 +22,9 @@
  * Boston, MA  02110-1301  USA
  */
 package org.hibernate.test.dialect.functional.cache;
-import static org.hibernate.TestLogger.LOG;
+
+import java.sql.Connection;
+import java.sql.SQLException;
 import java.sql.Statement;
 import java.util.ArrayList;
 import java.util.Calendar;
@@ -32,40 +34,38 @@ import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import junit.framework.Test;
+
 import org.hibernate.LockMode;
 import org.hibernate.Query;
 import org.hibernate.ScrollableResults;
 import org.hibernate.Transaction;
 import org.hibernate.classic.Session;
 import org.hibernate.dialect.Cache71Dialect;
-import org.hibernate.dialect.Dialect;
-import org.hibernate.dialect.HSQLDialect;
-import org.hibernate.dialect.InterbaseDialect;
-import org.hibernate.dialect.MckoiDialect;
-import org.hibernate.dialect.MySQLDialect;
-import org.hibernate.dialect.SybaseDialect;
-import org.hibernate.dialect.TimesTenDialect;
 import org.hibernate.dialect.function.SQLFunction;
+import org.hibernate.jdbc.Work;
+
+import org.junit.Test;
+
+import org.hibernate.testing.RequiresDialect;
+import org.hibernate.testing.junit4.BaseCoreFunctionalTestCase;
 import org.hibernate.test.legacy.Blobber;
 import org.hibernate.test.legacy.Broken;
 import org.hibernate.test.legacy.Fixed;
 import org.hibernate.test.legacy.Simple;
 import org.hibernate.test.legacy.Single;
-import org.hibernate.testing.junit.functional.DatabaseSpecificFunctionalTestCase;
-import org.hibernate.testing.junit.functional.FunctionalTestClassTestSuite;
+
+import static org.hibernate.TestLogger.LOG;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 
 /**
  * Tests for function support on CacheSQL...
  *
  * @author Jonathan Levinson
  */
-public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTestCase {
-
-	public SQLFunctionsInterSystemsTest(String name) {
-		super(name);
-	}
-
+@RequiresDialect( value = Cache71Dialect.class )
+public class SQLFunctionsInterSystemsTest extends BaseCoreFunctionalTestCase {
 	public String[] getMappings() {
 		return new String[] {
 				"legacy/AltSimple.hbm.xml",
@@ -75,31 +75,18 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		};
 	}
 
-	public static Test suite() {
-		return new FunctionalTestClassTestSuite( SQLFunctionsInterSystemsTest.class );
-	}
-
-	@Override
-    public boolean appliesTo(Dialect dialect) {
-		// all these test case apply only to testing InterSystems' CacheSQL dialect
-		return dialect instanceof Cache71Dialect;
-	}
-
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testDialectSQLFunctions() throws Exception {
-
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
-
-		Iterator iter = s.createQuery( "select max(s.count) from Simple s" ).iterate();
-
-		if ( getDialect() instanceof MySQLDialect ) assertTrue( iter.hasNext() && iter.next()==null );
 
 		Simple simple = new Simple();
 		simple.setName("Simple Dialect Function Test");
 		simple.setAddress("Simple Address");
 		simple.setPay(new Float(45.8));
 		simple.setCount(2);
-		s.save(simple, new Long(10) );
+		s.save(simple, Long.valueOf( 10 ) );
 
 		// Test to make sure allocating an specified object operates correctly.
 		assertTrue(
@@ -114,66 +101,57 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 				s.createQuery( "select count(*) from Simple s" ).list().size() == 1
 		);
 
-		if ( getDialect() instanceof Cache71Dialect) {
-			// Check Oracle Dialect mix of dialect functions - no args (no parenthesis and single arg functions
-			List rset = s.createQuery( "select s.name, sysdate, floor(s.pay), round(s.pay,0) from Simple s" ).list();
-			assertNotNull("Name string should have been returned",(((Object[])rset.get(0))[0]));
-			assertNotNull("Todays Date should have been returned",(((Object[])rset.get(0))[1]));
-			assertEquals("floor(45.8) result was incorrect ", new Integer(45), ( (Object[]) rset.get(0) )[2] );
-			assertEquals("round(45.8) result was incorrect ", new Float(46), ( (Object[]) rset.get(0) )[3] );
+		List rset = s.createQuery( "select s.name, sysdate, floor(s.pay), round(s.pay,0) from Simple s" ).list();
+		assertNotNull("Name string should have been returned",(((Object[])rset.get(0))[0]));
+		assertNotNull("Todays Date should have been returned",(((Object[])rset.get(0))[1]));
+		assertEquals("floor(45.8) result was incorrect ", new Integer(45), ( (Object[]) rset.get(0) )[2] );
+		assertEquals("round(45.8) result was incorrect ", new Float(46), ( (Object[]) rset.get(0) )[3] );
 
-			simple.setPay(new Float(-45.8));
-			s.update(simple);
+		simple.setPay(new Float(-45.8));
+		s.update(simple);
 
-			// Test type conversions while using nested functions (Float to Int).
-			rset = s.createQuery( "select abs(round(s.pay,0)) from Simple s" ).list();
-			assertEquals("abs(round(-45.8)) result was incorrect ", new Float(46), rset.get(0));
+		// Test type conversions while using nested functions (Float to Int).
+		rset = s.createQuery( "select abs(round(s.pay,0)) from Simple s" ).list();
+		assertEquals("abs(round(-45.8)) result was incorrect ", new Float(46), rset.get(0));
 
-			// Test a larger depth 3 function example - Not a useful combo other than for testing
-			assertTrue(
-					s.createQuery( "select floor(round(sysdate,1)) from Simple s" ).list().size() == 1
-			);
+		// Test a larger depth 3 function example - Not a useful combo other than for testing
+		assertTrue(
+				s.createQuery( "select floor(round(sysdate,1)) from Simple s" ).list().size() == 1
+		);
 
-			// Test the oracle standard NVL funtion as a test of multi-param functions...
-			simple.setPay(null);
-			s.update(simple);
-			Double value = (Double) s.createQuery("select mod( nvl(s.pay, 5000), 2 ) from Simple as s where s.id = 10").list().get(0);
-			assertTrue( 0 == value.intValue() );
-		}
+		// Test the oracle standard NVL funtion as a test of multi-param functions...
+		simple.setPay(null);
+		s.update(simple);
+		Double value = (Double) s.createQuery("select mod( nvl(s.pay, 5000), 2 ) from Simple as s where s.id = 10").list().get(0);
+		assertTrue( 0 == value.intValue() );
 
-		if ( (getDialect() instanceof Cache71Dialect) ) {
-			// Test the hsql standard MOD funtion as a test of multi-param functions...
-			Double value = (Double) s.createQuery( "select MOD(s.count, 2) from Simple as s where s.id = 10" )
-					.list()
-					.get(0);
-			assertTrue( 0 == value.intValue() );
-        }
-
-        /*
-        if ( (getDialect() instanceof Cache71Dialect) ) {
-            // Test the hsql standard MOD funtion as a test of multi-param functions...
-            Date value = (Date) s.find("select sysdate from Simple as s where nvl(cast(null as date), sysdate)=sysdate" ).get(0);
-            assertTrue( value.equals(new java.sql.Date(System.currentTimeMillis())));
-        }
-        */
+		// Test the hsql standard MOD funtion as a test of multi-param functions...
+		value = (Double) s.createQuery( "select MOD(s.count, 2) from Simple as s where s.id = 10" )
+				.list()
+				.get(0);
+		assertTrue( 0 == value.intValue() );
 
         s.delete(simple);
 		t.commit();
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing", "unchecked"})
 	public void testSetProperties() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save(simple, new Long(10) );
+		s.save(simple, Long.valueOf( 10 ) );
 		Query q = s.createQuery("from Simple s where s.name=:name and s.count=:count");
 		q.setProperties(simple);
 		assertTrue( q.list().get(0)==simple );
 		//misuse of "Single" as a propertyobject, but it was the first testclass i found with a collection ;)
 		Single single = new Single() { // trivial hack to test properties with arrays.
-			String[] getStuff() { return (String[]) getSeveral().toArray(new String[getSeveral().size()]); }
+			@SuppressWarnings( {"unchecked"})
+			String[] getStuff() { 
+				return (String[]) getSeveral().toArray(new String[getSeveral().size()]);
+			}
 		};
 
 		List l = new ArrayList();
@@ -193,11 +171,12 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testBroken() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Broken b = new Fixed();
-		b.setId( new Long(123));
+		b.setId( Long.valueOf( 123 ));
 		b.setOtherId("foobar");
 		s.save(b);
 		s.flush();
@@ -224,35 +203,37 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testNothinToUpdate() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save( simple, new Long(10) );
+		s.save( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
 		s = openSession();
 		t = s.beginTransaction();
-		s.update( simple, new Long(10) );
+		s.update( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
 		s = openSession();
 		t = s.beginTransaction();
-		s.update( simple, new Long(10) );
+		s.update( simple, Long.valueOf(10) );
 		s.delete(simple);
 		t.commit();
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testCachedQuery() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save( simple, new Long(10) );
+		s.save( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
@@ -291,7 +272,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 
 		s = openSession();
 		t = s.beginTransaction();
-		s.update( simple, new Long(10) );
+		s.update( simple, Long.valueOf(10) );
 		s.delete(simple);
 		t.commit();
 		s.close();
@@ -307,12 +288,13 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testCachedQueryRegion() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save( simple, new Long(10) );
+		s.save( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
@@ -343,7 +325,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 
 		s = openSession();
 		t = s.beginTransaction();
-		s.update( simple, new Long(10) );
+		s.update( simple, Long.valueOf(10) );
 		s.delete(simple);
 		t.commit();
 		s.close();
@@ -360,53 +342,40 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.close();
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing", "unchecked"})
 	public void testSQLFunctions() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save(simple, new Long(10) );
+		s.save(simple, Long.valueOf(10) );
 
-		if ( getDialect() instanceof Cache71Dialect) {
-			s.createQuery( "from Simple s where repeat('foo', 3) = 'foofoofoo'" ).list();
-			s.createQuery( "from Simple s where repeat(s.name, 3) = 'foofoofoo'" ).list();
-			s.createQuery( "from Simple s where repeat( lower(s.name), (3 + (1-1)) / 2) = 'foofoofoo'" ).list();
-		}
+		s.createQuery( "from Simple s where repeat('foo', 3) = 'foofoofoo'" ).list();
+		s.createQuery( "from Simple s where repeat(s.name, 3) = 'foofoofoo'" ).list();
+		s.createQuery( "from Simple s where repeat( lower(s.name), (3 + (1-1)) / 2) = 'foofoofoo'" ).list();
 
 		assertTrue(
 				s.createQuery( "from Simple s where upper( s.name ) ='SIMPLE 1'" ).list().size()==1
 		);
-		if ( !(getDialect() instanceof HSQLDialect) ) {
-			assertTrue(
-					s.createQuery(
-							"from Simple s where not( upper( s.name ) ='yada' or 1=2 or 'foo'='bar' or not('foo'='foo') or 'foo' like 'bar' )"
-					).list()
-							.size()==1
-			);
-		}
-		if ( !(getDialect() instanceof MySQLDialect) && !(getDialect() instanceof SybaseDialect) && !(getDialect() instanceof MckoiDialect) && !(getDialect() instanceof InterbaseDialect) && !(getDialect() instanceof TimesTenDialect) ) { //My SQL has a funny concatenation operator
-			assertTrue(
-					s.createQuery( "from Simple s where lower( s.name || ' foo' ) ='simple 1 foo'" ).list().size()==1
-			);
-		}
-        /* + is not concat in Cache
-        if ( (getDialect() instanceof Cache71Dialect) ) {
-			assertTrue(
-				s.find("from Simple s where lower( cons.name ' foo' ) ='simple 1 foo'").size()==1
-			);
-		}
-		*/
-		if ( (getDialect() instanceof Cache71Dialect) ) {
-			assertTrue(
-					s.createQuery( "from Simple s where lower( concat(s.name, ' foo') ) ='simple 1 foo'" ).list().size()==1
-			);
-		}
+		assertTrue(
+				s.createQuery(
+						"from Simple s where not( upper( s.name ) ='yada' or 1=2 or 'foo'='bar' or not('foo'='foo') or 'foo' like 'bar' )"
+				).list()
+						.size()==1
+		);
+
+		assertTrue(
+				s.createQuery( "from Simple s where lower( s.name || ' foo' ) ='simple 1 foo'" ).list().size()==1
+		);
+		assertTrue(
+				s.createQuery( "from Simple s where lower( concat(s.name, ' foo') ) ='simple 1 foo'" ).list().size()==1
+		);
 
 		Simple other = new Simple();
-		other.setName("Simple 2");
-		other.setCount(12);
-		simple.setOther(other);
-		s.save( other, new Long(20) );
+		other.setName( "Simple 2" );
+		other.setCount( 12 );
+		simple.setOther( other );
+		s.save( other, Long.valueOf(20) );
 		//s.find("from Simple s where s.name ## 'cat|rat|bag'");
 		assertTrue(
 				s.createQuery( "from Simple s where upper( s.other.name ) ='SIMPLE 2'" ).list().size()==1
@@ -427,76 +396,73 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 						.size()==1
 		);
 		Simple min = new Simple();
-		min.setCount(-1);
-		s.save(min, new Long(30) );
-		if ( ! (getDialect() instanceof MySQLDialect) && ! (getDialect() instanceof HSQLDialect) ) { //My SQL has no subqueries
-			assertTrue(
-					s.createQuery( "from Simple s where s.count > ( select min(sim.count) from Simple sim )" )
-							.list()
-							.size()==2
-			);
-			t.commit();
-			t = s.beginTransaction();
-			assertTrue(
-					s.createQuery(
-							"from Simple s where s = some( select sim from Simple sim where sim.count>=0 ) and s.count >= 0"
-					).list()
-							.size()==2
-			);
-			assertTrue(
-					s.createQuery(
-							"from Simple s where s = some( select sim from Simple sim where sim.other.count=s.other.count ) and s.other.count > 0"
-					).list()
-							.size()==1
-			);
-		}
+		min.setCount( -1 );
+		s.save(min, Long.valueOf(30) );
+
+		assertTrue(
+				s.createQuery( "from Simple s where s.count > ( select min(sim.count) from Simple sim )" )
+						.list()
+						.size()==2
+		);
+		t.commit();
+		t = s.beginTransaction();
+		assertTrue(
+				s.createQuery(
+						"from Simple s where s = some( select sim from Simple sim where sim.count>=0 ) and s.count >= 0"
+				).list()
+						.size()==2
+		);
+		assertTrue(
+				s.createQuery(
+						"from Simple s where s = some( select sim from Simple sim where sim.other.count=s.other.count ) and s.other.count > 0"
+				).list()
+						.size()==1
+		);
 
 		Iterator iter = s.createQuery( "select sum(s.count) from Simple s group by s.count having sum(s.count) > 10" )
 				.iterate();
 		assertTrue( iter.hasNext() );
-		assertEquals( new Long(12), iter.next() );
+		assertEquals( Long.valueOf( 12 ), iter.next() );
 		assertTrue( !iter.hasNext() );
-		if ( ! (getDialect() instanceof MySQLDialect) ) {
-			iter = s.createQuery( "select s.count from Simple s group by s.count having s.count = 12" ).iterate();
-			assertTrue( iter.hasNext() );
-		}
+		iter = s.createQuery( "select s.count from Simple s group by s.count having s.count = 12" ).iterate();
+		assertTrue( iter.hasNext() );
 
 		s.createQuery(
 				"select s.id, s.count, count(t), max(t.date) from Simple s, Simple t where s.count = t.count group by s.id, s.count order by s.count"
 		).iterate();
 
 		Query q = s.createQuery("from Simple s");
-		q.setMaxResults(10);
+		q.setMaxResults( 10 );
 		assertTrue( q.list().size()==3 );
 		q = s.createQuery("from Simple s");
-		q.setMaxResults(1);
+		q.setMaxResults( 1 );
 		assertTrue( q.list().size()==1 );
 		q = s.createQuery("from Simple s");
-		assertTrue( q.list().size()==3 );
+		assertTrue( q.list().size() == 3 );
 		q = s.createQuery("from Simple s where s.name = ?");
-		q.setString(0, "Simple 1");
+		q.setString( 0, "Simple 1" );
 		assertTrue( q.list().size()==1 );
 		q = s.createQuery("from Simple s where s.name = ? and upper(s.name) = ?");
 		q.setString(1, "SIMPLE 1");
-		q.setString(0, "Simple 1");
+		q.setString( 0, "Simple 1" );
 		q.setFirstResult(0);
 		assertTrue( q.iterate().hasNext() );
 		q = s.createQuery("from Simple s where s.name = :foo and upper(s.name) = :bar or s.count=:count or s.count=:count + 1");
-		q.setParameter("bar", "SIMPLE 1");
-		q.setString("foo", "Simple 1");
+		q.setParameter( "bar", "SIMPLE 1" );
+		q.setString( "foo", "Simple 1" );
 		q.setInteger("count", 69);
 		q.setFirstResult(0);
 		assertTrue( q.iterate().hasNext() );
 		q = s.createQuery("select s.id from Simple s");
 		q.setFirstResult(1);
-		q.setMaxResults(2);
+		q.setMaxResults( 2 );
 		iter = q.iterate();
 		int i=0;
 		while ( iter.hasNext() ) {
 			assertTrue( iter.next() instanceof Long );
 			i++;
 		}
-		assertTrue(i==2);
+		assertTrue( i == 2 );
 		q = s.createQuery("select all s, s.other from Simple s where s = :s");
 		q.setParameter("s", simple);
 		assertTrue( q.list().size()==1 );
@@ -504,7 +470,8 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 
 		q = s.createQuery("from Simple s where s.name in (:name_list) and s.count > :count");
 		HashSet set = new HashSet();
-		set.add("Simple 1"); set.add("foo");
+		set.add("Simple 1");
+		set.add("foo");
 		q.setParameterList( "name_list", set );
 		q.setParameter("count", new Integer(-1) );
 		assertTrue( q.list().size()==1 );
@@ -572,37 +539,9 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.flush();
 		s.getTransaction().commit();
 		s.close();
-
-
-		/*InputStream is = getClass().getClassLoader().getResourceAsStream("jdbc20.pdf");
-		s = sessionsopenSession();
-		b = (Blobber) s.load( Blobber.class, new Integer( b.getId() ) );
-		System.out.println( is.available() );
-		int size = is.available();
-		b.setBlob( Hibernate.createBlob( is, is.available() ) );
-		s.flush();
-		s.connection().commit();
-		ResultSet rs = s.connection().createStatement().executeQuery("select datalength(blob_) from blobber where id=" + b.getId() );
-		rs.next();
-		assertTrue( size==rs.getInt(1) );
-		rs.close();
-		s.close();
-
-		s = sessionsopenSession();
-		b = (Blobber) s.load( Blobber.class, new Integer( b.getId() ) );
-		File f = new File("C:/foo.pdf");
-		f.createNewFile();
-		FileOutputStream fos = new FileOutputStream(f);
-		Blob blob = b.getBlob();
-		byte[] bytes = blob.getBytes( 1, (int) blob.length() );
-		System.out.println( bytes.length );
-		fos.write(bytes);
-		fos.flush();
-		fos.close();
-		s.close();*/
-
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testSqlFunctionAsAlias() throws Exception {
 		String functionName = locateAppropriateDialectFunctionNameForAliasTest();
 		if (functionName == null) {
@@ -617,7 +556,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save( simple, new Long(10) );
+		s.save( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
@@ -631,6 +570,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		s.close();
 	}
 
+	@SuppressWarnings( {"ForLoopReplaceableByForEach"})
 	private String locateAppropriateDialectFunctionNameForAliasTest() {
 		for (Iterator itr = getDialect().getFunctions().entrySet().iterator(); itr.hasNext(); ) {
 			final Map.Entry entry = (Map.Entry) itr.next();
@@ -642,12 +582,13 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		return null;
 	}
 
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testCachedQueryOnInsert() throws Exception {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
 		Simple simple = new Simple();
 		simple.setName("Simple 1");
-		s.save( simple, new Long(10) );
+		s.save( simple, Long.valueOf(10) );
 		t.commit();
 		s.close();
 
@@ -671,7 +612,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		t = s.beginTransaction();
 		Simple simple2 = new Simple();
 		simple2.setCount(133);
-		s.save( simple2, new Long(12) );
+		s.save( simple2, Long.valueOf(12) );
 		t.commit();
 		s.close();
 
@@ -688,14 +629,16 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 		q = s.createQuery("from Simple s");
 		list = q.setCacheable(true).list();
 		assertTrue( list.size()==2 );
-		Iterator i = list.iterator();
-		while ( i.hasNext() ) s.delete( i.next() );
+		for ( Object o : list ) {
+			s.delete( o );
+		}
 		t.commit();
 		s.close();
 
 	}
 
-    public void testInterSystemsFunctions() throws Exception {
+    @SuppressWarnings( {"UnnecessaryBoxing", "UnnecessaryUnboxing"})
+	public void testInterSystemsFunctions() throws Exception {
         Calendar cal = new GregorianCalendar();
         cal.set(1977,6,3,0,0,0);
         java.sql.Timestamp testvalue = new java.sql.Timestamp(cal.getTimeInMillis());
@@ -706,46 +649,62 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
         testvalue3.setNanos(0);
 
         Session s = openSession();
-        Transaction t = s.beginTransaction();
+        s.beginTransaction();
         try {
-            Statement stmt = s.connection().createStatement();
-            stmt.executeUpdate("DROP FUNCTION spLock FROM TestInterSystemsFunctionsClass");
-            t.commit();
+			s.doWork(
+					new Work() {
+						@Override
+						public void execute(Connection connection) throws SQLException {
+							Statement stmt = connection.createStatement();
+							stmt.executeUpdate( "DROP FUNCTION spLock FROM TestInterSystemsFunctionsClass" );
+						}
+					}
+			);
         }
         catch (Exception ex) {
             System.out.println("as we expected stored procedure sp does not exist when we drop it");
 
         }
-        t = s.beginTransaction();
-        Statement stmt = s.connection().createStatement();
-        String create_function = "CREATE FUNCTION SQLUser.TestInterSystemsFunctionsClass_spLock\n" +
-                "     ( INOUT pHandle %SQLProcContext, \n" +
-                "       ROWID INTEGER \n" +
-                " )\n" +
-                " FOR User.TestInterSystemsFunctionsClass " +
-                "    PROCEDURE\n" +
-                "    RETURNS INTEGER\n" +
-                "    LANGUAGE OBJECTSCRIPT\n" +
-                "    {\n" +
-                "        q 0\n" +
-                "     }";
-        stmt.executeUpdate(create_function);
-        t.commit();
-        t = s.beginTransaction();
+		s.getTransaction().commit();
+
+        s.beginTransaction();
+		s.doWork(
+				new Work() {
+					@Override
+					public void execute(Connection connection) throws SQLException {
+						Statement stmt = connection.createStatement();
+						String create_function = "CREATE FUNCTION SQLUser.TestInterSystemsFunctionsClass_spLock\n" +
+								"     ( INOUT pHandle %SQLProcContext, \n" +
+								"       ROWID INTEGER \n" +
+								" )\n" +
+								" FOR User.TestInterSystemsFunctionsClass " +
+								"    PROCEDURE\n" +
+								"    RETURNS INTEGER\n" +
+								"    LANGUAGE OBJECTSCRIPT\n" +
+								"    {\n" +
+								"        q 0\n" +
+								"     }";
+						stmt.executeUpdate(create_function);
+					}
+				}
+		);
+        s.getTransaction().commit();
+
+        s.beginTransaction();
 
         TestInterSystemsFunctionsClass object = new TestInterSystemsFunctionsClass();
         object.setDateText("1977-07-03");
-        object.setDate1(testvalue);
-        object.setDate3(testvalue3);
-        s.save( object, new Long(10));
-        t.commit();
+        object.setDate1( testvalue );
+        object.setDate3( testvalue3 );
+        s.save( object, Long.valueOf( 10 ) );
+        s.getTransaction().commit();
         s.close();
+
         s = openSession();
-        s.clear();
-        t = s.beginTransaction();
-        TestInterSystemsFunctionsClass test = (TestInterSystemsFunctionsClass) s.get(TestInterSystemsFunctionsClass.class, new Long(10));
+        s.beginTransaction();
+        TestInterSystemsFunctionsClass test = (TestInterSystemsFunctionsClass) s.get(TestInterSystemsFunctionsClass.class, Long.valueOf(10));
         assertTrue( test.getDate1().equals(testvalue));
-        test = (TestInterSystemsFunctionsClass) s.get(TestInterSystemsFunctionsClass.class, new Long(10), LockMode.UPGRADE);
+        test = (TestInterSystemsFunctionsClass) s.get(TestInterSystemsFunctionsClass.class, Long.valueOf(10), LockMode.UPGRADE);
         assertTrue( test.getDate1().equals(testvalue));
         Date value = (Date) s.createQuery( "select nvl(o.date,o.dateText) from TestInterSystemsFunctionsClass as o" )
 				.list()
@@ -803,7 +762,7 @@ public class SQLFunctionsInterSystemsTest extends DatabaseSpecificFunctionalTest
 				.get(0);
         assertTrue(diff.doubleValue() == 1.0);
 
-        t.commit();
+        s.getTransaction().commit();
         s.close();
 
 
