@@ -1,10 +1,10 @@
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
- * Copyright (c) 2008, Red Hat Middleware LLC or third-party contributors as
+ * Copyright (c) 2008-2011, Red Hat Inc. or third-party contributors as
  * indicated by the @author tags or express copyright attribution
  * statements applied by the authors.  All third-party contributions are
- * distributed under license by Red Hat Middleware LLC.
+ * distributed under license by Red Hat Inc.
  *
  * This copyrighted material is made available to anyone wishing to use, modify,
  * copy, or redistribute it subject to the terms and conditions of the GNU
@@ -20,30 +20,31 @@
  * Free Software Foundation, Inc.
  * 51 Franklin Street, Fifth Floor
  * Boston, MA  02110-1301  USA
- *
  */
 package org.hibernate.test.filter.hql;
 import java.util.Date;
+
 import org.hibernate.Session;
-import org.hibernate.testing.junit.functional.FunctionalTestCase;
+
+import org.junit.Test;
+
+import org.hibernate.testing.junit4.BaseCoreFunctionalTestCase;
+
+import static org.junit.Assert.assertEquals;
 
 /**
- * TODO : javadoc
- *
  * @author Steve Ebersole
  */
-public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
-	public JoinedFilteredBulkManipulationTest(String string) {
-		super( string );
-	}
-
+public class JoinedFilteredBulkManipulationTest extends BaseCoreFunctionalTestCase {
 	public String[] getMappings() {
-		return new String[]{
+		return new String[] {
 			"filter/hql/filter-defs.hbm.xml",
 			"filter/hql/Joined.hbm.xml"
 		};
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlDeleteRoot() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -56,7 +57,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "delete Person" ).executeUpdate();
 		assertEquals( 2, count );
 		s.getTransaction().commit();
@@ -69,6 +70,8 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlDeleteNonLeaf() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -81,7 +84,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "delete User" ).executeUpdate();
 		assertEquals( 2, count );
 		s.getTransaction().commit();
@@ -94,6 +97,8 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlDeleteLeaf() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -106,7 +111,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "delete Employee" ).executeUpdate();
 		assertEquals( 1, count );
 		s.getTransaction().commit();
@@ -119,6 +124,8 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlUpdateRoot() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -131,7 +138,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "update Person p set p.name = '<male>'" ).executeUpdate();
 		assertEquals( 2, count );
 		s.getTransaction().commit();
@@ -144,6 +151,8 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlUpdateNonLeaf() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -156,7 +165,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "update User u set u.username = :un where u.name = :n" )
 				.setString( "un", "charlie" )
 				.setString( "n", "Wanda" )
@@ -172,6 +181,8 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public void testFilteredJoinedSubclassHqlUpdateLeaf() {
 		Session s = openSession();
 		s.beginTransaction();
@@ -184,7 +195,7 @@ public class JoinedFilteredBulkManipulationTest extends FunctionalTestCase {
 
 		s = openSession();
 		s.beginTransaction();
-		s.enableFilter( "sex" ).setParameter( "sexCode", new Character('M' ) );
+		s.enableFilter( "sex" ).setParameter( "sexCode", Character.valueOf( 'M' ) );
 		int count = s.createQuery( "update Customer c set c.company = 'XYZ'" ).executeUpdate();
 		assertEquals( 1, count );
 		s.getTransaction().commit();
