@@ -1,10 +1,10 @@
 /*
  * Hibernate, Relational Persistence for Idiomatic Java
  *
- * Copyright (c) 2008, Red Hat Middleware LLC or third-party contributors as
+ * Copyright (c) 2008-2011, Red Hat Inc. or third-party contributors as
  * indicated by the @author tags or express copyright attribution
  * statements applied by the authors.  All third-party contributions are
- * distributed under license by Red Hat Middleware LLC.
+ * distributed under license by Red Hat Inc.
  *
  * This copyrighted material is made available to anyone wishing to use, modify,
  * copy, or redistribute it subject to the terms and conditions of the GNU
@@ -20,13 +20,11 @@
  * Free Software Foundation, Inc.
  * 51 Franklin Street, Fifth Floor
  * Boston, MA  02110-1301  USA
- *
  */
 package org.hibernate.test.manytomanyassociationclass.surrogateid.assigned;
-import junit.framework.Test;
+
 import org.hibernate.test.manytomanyassociationclass.AbstractManyToManyAssociationClassTest;
 import org.hibernate.test.manytomanyassociationclass.Membership;
-import org.hibernate.testing.junit.functional.FunctionalTestClassTestSuite;
 
 /**
  * Tests on many-to-many association using an association class with a surrogate ID that is assigned.
@@ -34,19 +32,14 @@ import org.hibernate.testing.junit.functional.FunctionalTestClassTestSuite;
  * @author Gail Badner
  */
 public class ManyToManyAssociationClassAssignedIdTest extends AbstractManyToManyAssociationClassTest {
-	public ManyToManyAssociationClassAssignedIdTest(String string) {
-		super( string );
-	}
-
+	@Override
 	public String[] getMappings() {
 		return new String[] { "manytomanyassociationclass/surrogateid/assigned/Mappings.hbm.xml" };
 	}
 
-	public static Test suite() {
-		return new FunctionalTestClassTestSuite( ManyToManyAssociationClassAssignedIdTest.class );
-	}
-
+	@Override
+	@SuppressWarnings( {"UnnecessaryBoxing"})
 	public Membership createMembership(String name) {
-		return new Membership( new Long( 1000 ), name );
+		return new Membership( Long.valueOf( 1000 ), name );
 	}
 }
