@@ -1,35 +1,57 @@
-//$Id: UnionSubclassTest.java 10977 2006-12-12 23:28:04Z steve.ebersole@jboss.com $
+/*
+ * Hibernate, Relational Persistence for Idiomatic Java
+ *
+ * Copyright (c) 2006-2011, Red Hat Inc. or third-party contributors as
+ * indicated by the @author tags or express copyright attribution
+ * statements applied by the authors.  All third-party contributions are
+ * distributed under license by Red Hat Inc.
+ *
+ * This copyrighted material is made available to anyone wishing to use, modify,
+ * copy, or redistribute it subject to the terms and conditions of the GNU
+ * Lesser General Public License, as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
+ * or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
+ * for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along with this distribution; if not, write to:
+ * Free Software Foundation, Inc.
+ * 51 Franklin Street, Fifth Floor
+ * Boston, MA  02110-1301  USA
+ */
 package org.hibernate.test.unionsubclass2;
+
 import java.math.BigDecimal;
-import java.util.Iterator;
 import java.util.List;
-import junit.framework.Test;
+
 import org.hibernate.Hibernate;
 import org.hibernate.Session;
 import org.hibernate.Transaction;
 import org.hibernate.criterion.Property;
 import org.hibernate.criterion.Restrictions;
 import org.hibernate.dialect.HSQLDialect;
-import org.hibernate.testing.junit.functional.FunctionalTestCase;
-import org.hibernate.testing.junit.functional.FunctionalTestClassTestSuite;
+
+import org.junit.Test;
+
+import org.hibernate.testing.junit4.BaseCoreFunctionalTestCase;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 
 /**
  * @author Gavin King
  */
-public class UnionSubclassTest extends FunctionalTestCase {
-	
-	public UnionSubclassTest(String str) {
-		super(str);
-	}
-
-	public String[] getMappings() {
+@SuppressWarnings( {"UnnecessaryBoxing"})
+public class UnionSubclassTest extends BaseCoreFunctionalTestCase {
+	protected String[] getMappings() {
 		return new String[] { "unionsubclass2/Person.hbm.xml" };
 	}
 
-	public static Test suite() {
-		return new FunctionalTestClassTestSuite( UnionSubclassTest.class );
-	}
-
+	@Test
 	public void testUnionSubclass() {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
@@ -67,8 +89,8 @@ public class UnionSubclassTest extends FunctionalTestCase {
 		s.clear();
 
 		List customers = s.createQuery("from Customer c left join fetch c.salesperson").list();
-		for ( Iterator iter = customers.iterator(); iter.hasNext(); ) {
-			Customer c = (Customer) iter.next();
+		for ( Object customer : customers ) {
+			Customer c = (Customer) customer;
 			assertTrue( Hibernate.isInitialized( c.getSalesperson() ) );
 			assertEquals( c.getSalesperson().getName(), "Mark" );
 		}
@@ -76,8 +98,8 @@ public class UnionSubclassTest extends FunctionalTestCase {
 		s.clear();
 		
 		customers = s.createQuery("from Customer").list();
-		for ( Iterator iter = customers.iterator(); iter.hasNext(); ) {
-			Customer c = (Customer) iter.next();
+		for ( Object customer : customers ) {
+			Customer c = (Customer) customer;
 			assertFalse( Hibernate.isInitialized( c.getSalesperson() ) );
 			assertEquals( c.getSalesperson().getName(), "Mark" );
 		}
@@ -85,8 +107,8 @@ public class UnionSubclassTest extends FunctionalTestCase {
 		s.clear();
 		
 
-		mark = (Employee) s.get( Employee.class, new Long( mark.getId() ) );
-		joe = (Customer) s.get( Customer.class, new Long( joe.getId() ) );
+		mark = (Employee) s.get( Employee.class, Long.valueOf( mark.getId() ) );
+		joe = (Customer) s.get( Customer.class, Long.valueOf( joe.getId() ) );
 		
  		mark.setZip("30306");
 		assertEquals( s.createQuery("from Person p where p.address.zip = '30306'").list().size(), 1 );
@@ -102,7 +124,8 @@ public class UnionSubclassTest extends FunctionalTestCase {
 		t.commit();
 		s.close();
 	}
-	
+
+	@Test
 	public void testQuerySubclassAttribute() {
 		if ( getDialect() instanceof HSQLDialect ) {
 			return; // TODO : why??
@@ -144,6 +167,7 @@ public class UnionSubclassTest extends FunctionalTestCase {
 		s.close();
 	}
 
+	@Test
 	public void testCustomColumnReadAndWrite() {
 		Session s = openSession();
 		Transaction t = s.beginTransaction();
